# fed

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: command.rs  config.rs  error.rs  log.rs  main.rs  syntax.rs  theme.rs  utils.rs
