[package]
name = "fed"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
crossterm = "0.27.0"
once_cell = "1.19.0"
plist = "1.6.0"
thiserror = "1.0.52"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
tree-sitter-javascript = "0.20.1"
